# philips-hue-bsb002

./: Jenkinsfile  Makefile  README.md  bitbucket.Jenkinsfile
foss-packages/grpc/: Makefile  config.mk  host.mk
foss-packages/nginx-nchan/: Makefile  config.mk  host.mk
foss-packages/spdlog/: Makefile  config.mk  host.mk
foss-packages/taocppjson/: Makefile  config.mk  host.mk
homekit/package/chacha20-simple/: CMakeLists.txt  LICENSE  Makefile
homekit/package/chacha20-simple/patches/: 010-makefile-fixes.patch  020-ansi-comment-fixes.patch  series
homekit/package/curve25519-donna/: CMakeLists.txt  Makefile
homekit/package/curve25519-donna/patches/: 010-makefile-fixes.patch  020-add-header-file.patch  series
homekit/package/ed25519-donna/: CMakeLists.txt  Makefile
homekit/package/ed25519-donna/patches/: 010-makefile-fixes.patch  020-custom-hash.patch  030-custom-random.patch  series
homekit/package/jsmn/: Makefile
homekit/package/jsmn/patches/: 010-CAE-add-install-makefile-target.patch
homekit/package/poly1305-donna/: CMakeLists.txt  Makefile
homekit/package/poly1305-donna/patches/: 010-add-makefile.patch  series
homekit/package/srp/: CMakeLists.txt  Config.in  Makefile
homekit/package/srp/patches/: 010-makefile-fixes.patch  020-t_math-fixes.patch  030-sha-hash.patch  series
homekit/package/tomcrypt/: CMakeLists.txt  Config.in  Makefile
homekit/package/tomcrypt/patches/: 010-makefile-fixes.patch  020-backport-hkdf.patch  series
homekit/package/tommath/: CMakeLists.txt  Makefile
homekit/package/tommath/patches/: 010-makefile-fixes.patch  series
qsdk/: README.md  feeds.conf  rules.mk
qsdk/config/: Config-kernel.in
qsdk/dl/: backports-20160607.tar.bz2  chacha20-simple-1.0.tar.bz2  hostapd-2015-09-27.tar.bz2  iw-4.3.tar.xz  libprotobuf-c-v1.2.1.tar.bz2  mbedtls-2.3.0-apache.tgz
qsdk/include/: download.mk  host-build.mk  image.mk  package-dumpinfo.mk  package-info.mk  package-ipkg.mk  package.mk  target.mk  toplevel.mk
qsdk/package/: Makefile
qsdk/package/base-files/: Makefile
qsdk/package/base-files/files/etc/init.d/: sysfixtime
qsdk/package/base-files/files/etc/rc.button/: reset
qsdk/package/boot/lk-ipq806x/: Makefile
qsdk/package/boot/qca-legacy-uboot/: Makefile
qsdk/package/boot/qca-legacy-uboot/configs/: bsb002-ar71xx_generic.mk
qsdk/package/boot/qca-romboot/: Makefile
qsdk/package/boot/uboot-envtools/: Makefile
qsdk/package/boot/uboot-envtools/files/: ar71xx  ipq806x
qsdk/package/boot/uboot-ipq40xx/: Makefile
qsdk/package/boot/uboot-ipq806x/: Makefile
qsdk/package/charlietalk/: Makefile
qsdk/package/devel/gdb/: Makefile
qsdk/package/devel/strace/: Makefile
qsdk/package/firmware/linux-firmware/: Makefile
qsdk/package/kernel/button-hotplug/: Makefile
qsdk/package/kernel/gpio-button-hotplug/: Makefile
qsdk/package/kernel/linux/modules/: other.mk  sound.mk  video.mk
qsdk/package/libs/libconfig/: Makefile
qsdk/package/libs/libevent2/: Makefile
qsdk/package/libs/libnl/: Makefile
qsdk/package/libs/libnl-tiny/: Makefile
qsdk/package/libs/libpcap/: Makefile
qsdk/package/libs/libubox/: LICENSE  Makefile
qsdk/package/libs/mbedtls/: Makefile  config.mk
qsdk/package/libs/ncurses/: Makefile
qsdk/package/libs/ocf-crypto-headers/: Makefile
qsdk/package/libs/openssl/: Makefile
qsdk/package/libs/toolchain/: Makefile
qsdk/package/network/config/firewall/: LICENSE  Makefile
qsdk/package/network/config/netifd/: Makefile
qsdk/package/network/config/netifd/patches/: 100-Fix-dns-order.patch
qsdk/package/network/services/dnsmasq/files/: dnsmasq.init
qsdk/package/network/services/hostapd/: Makefile
qsdk/package/network/services/hostapd/files/: netifd.sh  wps-hotplug.sh
qsdk/package/network/services/odhcpd/files/: odhcpd.init
qsdk/package/network/services/ppp/: Makefile
qsdk/package/network/utils/iw/: Makefile
qsdk/package/network/utils/iwinfo/: Makefile
qsdk/package/network/utils/tcpdump/: Makefile
qsdk/package/network/utils/tlsdate/: Makefile
qsdk/package/network/utils/tlsdate/license-fixups/: tlsdate-ca-roots.conf.txt
qsdk/package/network/utils/tlsdate/patches/: 0001-Use-readv-writev-instead-of-preadv-pwritev.patch  0002-Graceful-fallback-to-CLOCK_MONOTONIC.patch
qsdk/package/network/utils/wireless-tools/: Makefile
qsdk/package/system/fstools/patches/: 0001-enable_eMMC_ext4_boot_support.patch  0003-fix-factory-flashed-startup-issue-with-jffs2-on-ubi-.patch
qsdk/package/system/mtd/: Makefile
qsdk/package/system/procd/: Makefile
qsdk/package/system/procd/files/: procd.sh
qsdk/package/system/procd/patches/: 020-adds-optional-fail-hook-for-use-by-init-scripts.patch
qsdk/package/system/uci/: Makefile
qsdk/package/system/usign/: LICENSE  Makefile
qsdk/package/utils/busybox/: Config-defaults.in  Makefile
qsdk/package/utils/busybox/files/: ntpd-monitor  ntpd.script  sysntpd  utils.sh
qsdk/package/utils/jsonfilter/: LICENSE  Makefile
qsdk/package/utils/pm-utils/: Makefile
qsdk/package/utils/pm-utils/files/: akronite-power-save.sh
qsdk/package/utils/util-linux/: Makefile
qsdk/qca/feeds/oldpackages/libs/avahi/: Makefile
qsdk/qca/feeds/oldpackages/libs/boost/: Makefile
qsdk/qca/feeds/oldpackages/libs/libdaemon/: Makefile
qsdk/qca/feeds/wlan-open/mac80211/: Makefile
qsdk/qca/src/qca-legacy-uboot/: Makefile
qsdk/qca/src/qca-legacy-uboot/.bitbucket/: CODEOWNERS
qsdk/qca/src/qca-legacy-uboot/common/: cmd_bootm.c  cmd_nand.c  env_flash.c
qsdk/qca/src/qca-legacy-uboot/include/: common.h
qsdk/qca/src/qca-legacy-uboot/net/: eth.c
qsdk/qca/src/qca-romboot/sco/: gmac_fwd.c
qsdk/scripts/: download.pl  feeds
qsdk/toolchain/uClibc/config/: common
qsdk/toolchain/uClibc/patches/: 0001-memmove-disable-use-of-memcpy.patch
qsdk/tools/: Makefile
qsdk/tools/rsa/host/: README  rsa_genkey  rsa_sign
qsdk/tools/rsa/host/patches/: 001-program-rsa-sign-use-sha256-instead-of-sha1.patch  002-program-rsa-genkey-key-length-2048-instead-of-1024.patch  003-program-rsa-sign-specify-priv-key.patch  004-program-rsa-genkey-c-type.patch
(+110 files in other folders)
